# promptkit

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.agents/agents/auditor/: AGENT.md
.agents/skills/speckit-git-commit/: SKILL.md
.agents/skills/speckit-implement/: SKILL.md
.agents/skills/speckit-plan/: SKILL.md
.agents/skills/speckit-tasks/: SKILL.md
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: agy.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
apps/server/: README.md  __init__.py  manage.py  pyproject.toml
apps/server/config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
docs/: architecture.md  project-spec.md  project_plan.md  prompt-server-requirements.md
specs/001-monorepo-django-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-monorepo-django-setup/checklists/: requirements.md
specs/001-monorepo-django-setup/contracts/: db-health-contract.md  env-contract.md
tests/: __init__.py
tests/promptkit/: __init__.py
tests/promptkit/unit/: __init__.py
tests/promptkit_django/: __init__.py
tests/promptkit_django/integration/: __init__.py
tests/promptkit_django/unit/: __init__.py
tests/server/: __init__.py
tests/server/integration/: __init__.py  test_db_connection.py  test_server_app.py
tests/server/unit/: __init__.py
tests/unit/: test_workspace.py
