[project]
name = "promptkit-monorepo"
version = "0.1.0"
description = "Framework Agnostic Prompt Registry SDK & Django Registry Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.0,<6.0",
    "djangorestframework>=3.15.0",
    "psycopg[binary]>=3.1.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "django-stubs>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps/server"]

[tool.uv.workspace]
members = ["apps/*", "packages/*"]

[tool.ruff]
target-version = "py313"
line-length = 100
include = ["apps/**/*.py", "packages/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "."
plugins = ["mypy_django_plugin.main"]
files = ["apps", "packages", "tests"]

[tool.django-stubs]
django_settings_module = "apps.server.config.settings"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "apps.server.config.settings"
