[project]
name = "server"
version = "0.1.0"
description = "Prompt Registry Django Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.0,<6.0",
    "djangorestframework>=3.15.0",
    "psycopg[binary]>=3.1.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config"]
